--- a/GigAssistant/package.json
+++ b/GigAssistant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gigassistant",
-  "main": "App.js",
+  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
